syntax = "proto3";

package emails;

service EmailsService {
  rpc SendUserRegistrationEmail(SendUserRegistrationEmailRequest) returns (SendEmailResponse);
}

message GrpcMetadata {
  optional string ipAddress = 1;
  optional string userAgent = 2;
  optional string subscriberId = 3;
}

message SendUserRegistrationEmailRequest {
  string email = 1;
  string username = 2;
  string fullName = 3;
  string password = 4;
  string role = 5;
  string codeService = 6;
  string companyName = 7;
  string primaryColor = 8;
  string logoUrl = 9;
  optional string subscriptionDetailId = 10;
  optional GrpcMetadata grpcMetadata = 11;
}

message SendEmailResponse {
  bool success = 1;
  string message = 2;
  string error = 3;
}